crates/tun-engine-macros/tests/compile_fail/args.stderr
error: #[freeze] does not accept arguments
 --> tests/compile_fail/args.rs:3:1
  |
3 | #[freeze(anything)]
  | ^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in the attribute macro `freeze` (in Nightly builds, run with -Z macro-backtrace for more info)
